// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Failing create field metadata tests suite should fail to create NUMERIC field type via API 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Field type NUMERIC is not supported for field creation. Use NUMBER instead.",
                "userFriendlyMessage": "Field type NUMERIC is not supported. Use Number instead.",
                "value": "NUMERIC",
              },
            ],
            "flatEntityMinimalInformation": {
              "name": "numericField",
              "objectMetadataUniversalIdentifier": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
        "viewField": [
          {
            "errors": [
              {
                "code": "INVALID_VIEW_DATA",
                "message": "Field metadata not found",
                "userFriendlyMessage": "Field metadata not found",
              },
            ],
            "flatEntityMinimalInformation": {
              "fieldMetadataUniversalIdentifier": Any<String>,
              "universalIdentifier": Any<String>,
              "viewUniversalIdentifier": Any<String>,
            },
            "metadataName": "viewField",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata, 1 viewField",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 2,
        "viewField": 1,
      },
      "userFriendlyMessage": "Many validation errors",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata tests suite should fail to create POSITION field type via API 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Field type POSITION must be named "position", got "positionField"",
                "userFriendlyMessage": "Field type POSITION must be named "position"",
                "value": "positionField",
              },
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "Field type POSITION must be a system field",
                "userFriendlyMessage": "Field type POSITION must be a system field",
                "value": false,
              },
            ],
            "flatEntityMinimalInformation": {
              "name": "positionField",
              "objectMetadataUniversalIdentifier": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "create",
          },
        ],
        "viewField": [
          {
            "errors": [
              {
                "code": "INVALID_VIEW_DATA",
                "message": "Field metadata not found",
                "userFriendlyMessage": "Field metadata not found",
              },
            ],
            "flatEntityMinimalInformation": {
              "fieldMetadataUniversalIdentifier": Any<String>,
              "universalIdentifier": Any<String>,
              "viewUniversalIdentifier": Any<String>,
            },
            "metadataName": "viewField",
            "status": "fail",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata, 1 viewField",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 2,
        "viewField": 1,
      },
      "userFriendlyMessage": "Many validation errors",
    },
    "message": "Multiple validation errors occurred while creating fields",
    "name": "GraphQLError",
  },
]
`;

exports[`Failing create field metadata tests suite should fail to create TS_VECTOR field type via API 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_FIELD_INPUT",
                "message": "TS Vector is not supported for field creation",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "type": "create",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while creating field",
    "name": "GraphQLError",
  },
]
`;
